switched to pug

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "jade": "^1.11.0",
     "lodash": "^4.15.0",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "pug": "^2.0.0-beta5"
   }
 }
